--- a/sys/dev/misc/putter/Makefile
+++ b/sys/dev/misc/putter/Makefile
@@ -1,8 +1,7 @@
-#	$NetBSD: Makefile,v 1.1 2007/11/12 16:39:32 pooka Exp $
-#
 
-INCSDIR=/usr/include/dev/putter
+KMOD=	putter
+SRCS=	putter.c putter.h putter_sys.h
 
-INCS=	putter.h
+DEBUG_FLAGS= -DPUTTERDEBUG -g -I${.CURDIR}/../../..
 
-.include <bsd.kinc.mk>
+.include <bsd.kmod.mk>
