putter: Disable debug

--- a/sys/dev/misc/putter/Makefile
+++ b/sys/dev/misc/putter/Makefile
@@ -2,6 +2,7 @@
 KMOD=	putter
 SRCS=	putter.c putter.h putter_sys.h
 
-DEBUG_FLAGS= -DPUTTERDEBUG -g -I${.CURDIR}/../../..
+DEBUG_FLAGS= -g -I${.CURDIR}/../../..
+#DEBUG_FLAGS+= -DPUTTERDEBUG
 
 .include <bsd.kmod.mk>
