--- a/lib/librefuse/Makefile
+++ b/lib/librefuse/Makefile
@@ -3,18 +3,24 @@
 USE_FORT?=	yes	# data driven bugs?
 
 LIB=		refuse
-LIBDPLIBS+=	puffs	${.CURDIR}/../libpuffs		\
-		pthread	${.CURDIR}/../libpthread
 
 .ifdef DEBUG
 FUSE_OPT_DEBUG_FLAGS=	-g -DFUSE_OPT_DEBUG
 .endif
 
+SRCROOT=	${.CURDIR}/../..
 CFLAGS+=	${FUSE_OPT_DEBUG_FLAGS}
+CFLAGS+=	-I${SRCROOT}/lib/libpuffs -I${SRCROOT}/sys -I.
 SRCS=		refuse.c refuse_opt.c
 MAN=		refuse.3
-WARNS=		4
+WARNS=		2
 INCS=           fuse.h fuse_opt.h
 INCSDIR=        /usr/include
+
+MOUNT=		/usr/src/sbin/mount
+.PATH:		${MOUNT}
+CFLAGS+=	-I${MOUNT}
+
+LDFLAGS+=-L${SRCROOT}/lib/libpuffs
 
 .include <bsd.lib.mk>
